tests/Rules/Aria/Fixtures/valid/landmark_with_label.html.twig
<main role="main" aria-label="Main content"></main>
