tests/Rules/Aria/Fixtures/invalid/landmark_missing_label.html.twig
{# 1 errors #}
<main role="main"></main>
